Chinese loc fixes
Some modifications I made previously, but not integrated into previous hotfixes.
Also removed an abandoned file.

--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_ascension_worlds_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_ascension_worlds_l_simp_chinese.yml
@@ -1,4 +1,5 @@
 ﻿l_simp_chinese:
+ pd_placeholder_tooltip: "Placeholder AP - DO NOT USE"
  d_pd_tree_of_life_uncommon: "生命之树"
  d_pd_tree_of_life_uncommon_desc: "巨树的一根分枝，被蜂巢移植到此处。尽管生长环境适宜，此地异常的生态系统却使其无法完全成长。"
  d_pd_tree_of_life_home: "生命之树"
@@ -21,8 +22,7 @@
  pd_no_lifetree_desc: "没有生命之树，蜂群是不完整的。"
  origin_pd_aw_tree_of_life: "Placeholder Origin - DO NOT USE"
  origin_pd_aw_tree_of_life_desc: "This origin is a placeholder and will not work in Stellaris. Please remove it before starting  your game, as it will cause issues."
- pd_placeholder_tooltip: "Placeholder AP - DO NOT USE"
- decision_pd_wasteland_planet: "Unregulated Industrial Standards"
+ decision_pd_wasteland_planet: "无管制工业标准"
  decision_pd_wasteland_planet_desc: "环境问题只会阻碍我们前进。忽略该星球的自然生态系统，我们会解放它真正的工业潜力。"
  decision_pd_wasteland_planet_effects_short: "已添加§Y$pd_wasteland_planet$§!修正。\n\n会增加§G工业产出§!，但是会降低£mod_pop_environment_tolerance£ §R宜居性§!。"
  decision_pd_wasteland_planet_cleanup: "环境清理"
