--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -1,10 +1,4 @@
 ﻿l_simp_chinese:
- pc_pd_petrified: "木化石星球"
- pc_pd_petrified_desc: "拥有氮氧大气的岩石星球。水圈活跃且稳定，有被海洋分隔开的大陆，气候差异巨大。在冰河期结束后的全球性洪水的影响下，地表和地下都坐落着参天巨树的化石遗迹。"
- pc_pd_petrified_adj: "木化石"
- mod_pc_pd_petrified_habitability: "陆地星球宜居性"
- trait_pc_pd_petrified_preference: "陆地星球偏好"
- trait_pc_pd_petrified_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_retinal: "视醛光合星球"
  pc_pd_retinal_desc: "拥有氮氧大气的岩石星球。水圈富有活力又相当稳定，大陆被海洋分隔。植物的演化基于视黄醛光合作用，而非叶绿素光合作用——这令星球呈现独特的紫色色调。"
  pc_pd_retinal_adj: "紫色"
@@ -35,6 +29,18 @@
  mod_pc_pd_temperate_habitability: "陆地星球宜居性"
  trait_pc_pd_temperate_preference: "陆地星球偏好"
  trait_pc_pd_temperate_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_sakura: "樱花星球"
+ pc_pd_sakura_desc: "拥有氮氧大气的岩石星球。水圈活跃而稳定，大陆被海洋分隔。地表覆盖着繁茂的花树森林。"
+ pc_pd_sakura_adj: "樱花"
+ mod_pc_pd_sakura_habitability: "陆地星球宜居性"
+ trait_pc_pd_sakura_preference: "陆地星球偏好"
+ trait_pc_pd_sakura_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_petrified: "木化石星球"
+ pc_pd_petrified_desc: "拥有氮氧大气的岩石星球。水圈活跃且稳定，有被海洋分隔开的大陆，气候差异巨大。在冰河期结束后的全球性洪水的影响下，地表和地下都坐落着参天巨树的化石遗迹。"
+ pc_pd_petrified_adj: "木化石"
+ mod_pc_pd_petrified_habitability: "陆地星球宜居性"
+ trait_pc_pd_petrified_preference: "陆地星球偏好"
+ trait_pc_pd_petrified_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_megaflora: "巨植物星球"
  pc_pd_megaflora_desc: "潮汐锁定的岩质星球，拥有氮氧大气。森林茂密，水圈强力而健康。这颗星球是覆盖其表面的巨型植物的家园。"
  pc_pd_megaflora_adj: "森林"
@@ -77,6 +83,12 @@
  mod_pc_pd_kelp_habitability: "海洋星球宜居性"
  trait_pc_pd_kelp_preference: "海洋星球偏好"
  trait_pc_pd_kelp_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_algae: "粉藻星球"
+ pc_pd_algae_desc: "拥有氮氧大气和丰富水体的岩石星球。该星球上众多浅海和湖泊供养着绚丽的粉色藻华，这番壮丽之景在太空中也能看得一清二楚。"
+ pc_pd_algae_adj: "粉色"
+ mod_pc_pd_algae_habitability: "海洋星球宜居性"
+ trait_pc_pd_algae_preference: "海洋星球偏好"
+ trait_pc_pd_algae_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_reef: "珊瑚礁星球"
  pc_pd_reef_desc: "气候温和的岩石星球，拥有氮氧大气层与巨大的水圈。99%以上地表都是浅海，在行星轨道上可以直接看到隐藏在水面下的规模巨大的礁脉体系。有些地方的礁脉生长到高出水面，形成星罗棋布的礁脉链，成为仅有的露出海面的陆地。"
  pc_pd_reef_adj: "珊瑚礁"
@@ -119,6 +131,18 @@
  mod_pc_pd_fungal_habitability: "热带星球宜居性"
  trait_pc_pd_fungal_preference: "热带星球偏好"
  trait_pc_pd_fungal_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_aerial: "浮种星球"
+ pc_pd_aerial_desc: "一类拥有致密氮氧大气的湿润岩石星球，降水量显著。独特的植物孕育出巨大的种荚，如云般飘荡在植被繁茂的陆地上空。"
+ pc_pd_aerial_adj: "漂浮"
+ mod_pc_pd_aerial_habitability: "热带星球宜居性"
+ trait_pc_pd_aerial_preference: "热带星球偏好"
+ trait_pc_pd_aerial_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_lilypad: "睡莲星球"
+ pc_pd_lilypad_desc: "这类草木葱郁的岩石星球被致密的氮氧大气包裹着，孕育出温暖的浅海以及生意盎然的丰富生命。水生植物强韧的叶片构成了地表的次级生态系统。"
+ pc_pd_lilypad_adj: "漂浮"
+ mod_pc_pd_lilypad_habitability: "热带星球宜居性"
+ trait_pc_pd_lilypad_preference: "热带星球偏好"
+ trait_pc_pd_lilypad_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_geothermal: "地热星球"
  pc_pd_geothermal_desc: "拥有氮氧大气层的寒冷冰封星球，有受到天然地热喷口加热的热带裂谷，打破了广袤的冰层。冰雪融水和喷口中袅袅的蒸汽构成了这里的水圈。"
  pc_pd_geothermal_adj: "地热"
@@ -215,15 +239,27 @@
  mod_pc_pd_primal_habitability: "干旱星球宜居性"
  trait_pc_pd_primal_preference: "干旱星球偏好"
  trait_pc_pd_primal_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_steppe: "冷草原星球"
- pc_pd_steppe_desc: "干燥的岩石星球，拥有氮氧大气层。半干旱草原中分布着起伏的山丘和平原，乃是陆地上的主要景观。尽管几乎没有林木，雨量尚足以维持灌木和草禾。"
+ pc_pd_striped: "彩色丘陵星球"
+ pc_pd_striped_desc: "这是一颗干燥、拥有氮氧大气的岩石星球；环境干旱，沙尘遍布，有着颜色绚丽的矿物构造。"
+ pc_pd_striped_adj: "彩丘"
+ mod_pc_pd_striped_habitability: "干旱星球宜居性"
+ trait_pc_pd_striped_preference: "干旱星球偏好"
+ trait_pc_pd_striped_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_amethyst: "紫水晶星球"
+ pc_pd_amethyst_desc: "这颗干旱星球过去地质活动相当活跃。因而地壳中蕴藏着丰富的紫水晶石英矿。"
+ pc_pd_amethyst_adj: "石英"
+ mod_pc_pd_amethyst_habitability: "干旱星球宜居性"
+ trait_pc_pd_amethyst_preference: "干旱星球偏好"
+ trait_pc_pd_amethyst_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_steppe: "干草原星球"
+ pc_pd_steppe_desc: "干燥的岩石星球，拥有氮氧大气层。半干旱的草原中分布着起伏的山丘和平原，是陆地上的主要景观。尽管几乎没有林木，雨量尚足以维持灌木和草禾。"
  pc_pd_steppe_adj: "草地"
  mod_pc_pd_steppe_habitability: "草原星球宜居性"
  trait_pc_pd_steppe_preference: "草原星球偏好"
  trait_pc_pd_steppe_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_prairie: "温和草原星球"
+ pc_pd_prairie: "茂草原星球"
  pc_pd_prairie_desc: "拥有氮氧大气的岩石星球。水体和降水会呈现季节性变化。拥有一整片广袤的陆地，以及大型内陆海洋。夏季短暂而干燥，冬季则寒冷严酷。"
- pc_pd_prairie_adj: "温和草原"
+ pc_pd_prairie_adj: "茂草原"
  mod_pc_pd_prairie_habitability: "草原星球宜居性"
  trait_pc_pd_prairie_preference: "草原星球偏好"
  trait_pc_pd_prairie_preference_desc: "$trait_pc_arctic_preference_desc$"
@@ -245,6 +281,18 @@
  mod_pc_pd_aspen_habitability: "草原星球宜居性"
  trait_pc_pd_aspen_preference: "草原星球偏好"
  trait_pc_pd_aspen_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_sandstone: "砂岩星球"
+ pc_pd_sandstone_desc: "一类拥有氮氧大气的干燥岩石星球，草原广袤，烈风塑造出巨大的砂岩构造。这里的水圈维系着顽强的草本植物，后者已然适应这类环境。"
+ pc_pd_sandstone_adj: "强风"
+ mod_pc_pd_sandstone_habitability: "草原星球宜居性"
+ trait_pc_pd_sandstone_preference: "草原星球偏好"
+ trait_pc_pd_sandstone_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_turquoise: "绿松石星球"
+ pc_pd_turquoise_desc: "这颗亚热带草原星球上分布着密集的绿松石矿床，在地表几乎随处可见。"
+ pc_pd_turquoise_adj: "绿松石"
+ mod_pc_pd_turquoise_habitability: "草原星球宜居性"
+ trait_pc_pd_turquoise_preference: "草原星球偏好"
+ trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "超大陆星球"
  pc_pd_supercontinent_desc: "拥有氮氧大气的岩石星球，陆地的主要环境是沙漠和草原，板块构造还处于单一的超大陆状态。临近沿海的地区拥有繁茂的草木，内陆的环境则截然不同，由草原逐渐过渡为庞大的干燥荒漠。"
  pc_pd_supercontinent_adj: "超大陆"
@@ -287,6 +335,18 @@
  mod_pc_pd_ice_spike_habitability: "极地星球宜居性"
  trait_pc_pd_ice_spike_preference: "极地星球偏好"
  trait_pc_pd_ice_spike_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_crevasse: "冰裂星球"
+ pc_pd_crevasse_desc: "这是拥有氮氧大气圈的岩石星球，气候寒冷，水体基本是冻结的冰雪。尽管冰层表面环境极其恶劣，却有从地核中涌出的热能，在冰层深处塑成了众多条件适宜生存的裂谷。"
+ pc_pd_crevasse_adj: "冰裂"
+ mod_pc_pd_crevasse_habitability: "极地星球宜居性"
+ trait_pc_pd_crevasse_preference: "极地星球偏好"
+ trait_pc_pd_crevasse_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ice_dunes: "冰尘星球"
+ pc_pd_ice_dunes_desc: "拥有氮氧大气的寒冷岩石星球，水体基本都是冻结的冰雪。温度常年低于冰点，冰粒如沙，堆聚成丘。"
+ pc_pd_ice_dunes_adj: "寒冰"
+ mod_pc_pd_ice_dunes_habitability: "极地星球宜居性"
+ trait_pc_pd_ice_dunes_preference: "极地星球偏好"
+ trait_pc_pd_ice_dunes_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_storm: "风暴星球"
  pc_pd_storm_desc: "拥有氮氧大气层的寒冷岩石星球，此地拥有规模庞大的水圈。主要陆地均分布在两极附近，终年风暴不息的辽阔海洋将它们分隔开来。由于极端的环境条件，生命大都生活在洋面以下。"
  pc_pd_storm_adj: "风暴"
@@ -329,6 +389,12 @@
  mod_pc_pd_fjord_habitability: "高山星球宜居性"
  trait_pc_pd_fjord_preference: "高山星球偏好"
  trait_pc_pd_fjord_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_blossom: "花簇星球"
+ pc_pd_blossom_desc: "这类岩石星球拥有氮氧大气和规模有限的水圈，经历着季节性动态变化。丰沃的草原上点缀着怒放的花卉，这番壮丽之景在轨道上也能看得一清二楚。"
+ pc_pd_blossom_adj: "繁花"
+ mod_pc_pd_blossom_habitability: "高山星球宜居性"
+ trait_pc_pd_blossom_preference: "高山星球偏好"
+ trait_pc_pd_blossom_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_glaciovolcanic: "冰川火山星球"
  pc_pd_glaciovolcanic_desc: "拥有氮氧大气的寒冷山地星球。这里的火山活动非常活跃，因而形成了丰富的地热湖泊，将罕见的矿物和能源带到冰封的地表。"
  pc_pd_glaciovolcanic_adj: "火山"
@@ -409,6 +475,8 @@
  mod_pc_pd_gaia_superhabitable_habitability: "超级类地星球宜居性（盖亚）"
  trait_pc_pd_gaia_superhabitable_preference: "超级类地星球偏好（盖亚）"
  trait_pc_pd_gaia_superhabitable_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_nuked_superhabitable: "超级类地星球（死寂）"
+ pc_pd_nuked_superhabitable_desc: "这一超级类地星球是拥有氮氧大气的岩石星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面鲜有生命迹象，强重力环境对于不适应者会是一种折磨。"
  pc_pd_wet_tidally_locked: "潮汐锁定星球（湿润）"
  pc_pd_wet_tidally_locked_desc: "这一潮汐锁定行星是湿润的岩石星球，拥有致密的氮氧大气。这里的温度与稳定的水圈，使得昼半球与黄昏地带蕴藏着丰富的生物多样性。"
  pc_pd_wet_tidally_locked_adj: "潮汐锁定"
@@ -433,8 +501,22 @@
  mod_pc_pd_gaia_tidally_locked_habitability: "潮汐锁定星球宜居性（湿润·盖亚）"
  trait_pc_pd_gaia_tidally_locked_preference: "潮汐锁定星球偏好（湿润·盖亚）"
  trait_pc_pd_gaia_tidally_locked_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_dry_gaia_tidally_locked: "潮汐锁定星球（干燥·盖亚）"
+ pc_pd_dry_gaia_tidally_locked_desc: "这类潮汐锁定星球是气候温和的理想世界，拥有氮氧大气层和可以自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
+ pc_pd_dry_gaia_tidally_locked_adj: "潮汐锁定"
+ mod_pc_pd_dry_gaia_tidally_locked_habitability: "潮汐锁定星球宜居性（干燥·盖亚）"
+ trait_pc_pd_dry_gaia_tidally_locked_preference: "潮汐锁定星球偏好（干燥·盖亚）"
+ trait_pc_pd_dry_gaia_tidally_locked_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_cold_gaia_tidally_locked: "潮汐锁定星球（寒冷·盖亚）"
+ pc_pd_cold_gaia_tidally_locked_desc: "这类潮汐锁定星球是气候温和的理想世界，拥有氮氧大气层和可以自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
+ pc_pd_cold_gaia_tidally_locked_adj: "潮汐锁定"
+ mod_pc_pd_cold_gaia_tidally_locked_habitability: "潮汐锁定星球宜居性（寒冷·盖亚）"
+ trait_pc_pd_cold_gaia_tidally_locked_preference: "潮汐锁定星球偏好（寒冷·盖亚）"
+ trait_pc_pd_cold_gaia_tidally_locked_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_barren_tidally_locked: "潮汐锁定星球（荒芜）"
  pc_pd_barren_tidally_locked_desc: "这一潮汐锁定星球是荒芜的岩石星球，大气层相当稀薄，或者完全没有大气。地表遍布着陨石坑，不存在任何生命形式。"
+ pc_pd_nuked_tidally_locked: "潮汐锁定星球（死寂）"
+ pc_pd_nuked_tidally_locked_desc: "这一潮汐锁定星球是拥有氮氧大气的岩石星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面鲜有生命迹象。"
  pc_pd_cold_cave: "岩洞星球（寒冷）"
  pc_pd_cold_cave_desc: "这是拥有氮氧大气的岩石星球。这里的磁气圈较为薄弱，地表基本都是裸露的荒芜岩石。地表下隐藏着难以估量的洞穴体系，其中的封冻水体维系着地衣和苔藓的存在。"
  pc_pd_cold_cave_adj: "岩洞"
@@ -461,12 +543,8 @@
  trait_pc_pd_gaia_cave_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_barren_cave: "岩洞星球（荒芜）"
  pc_pd_barren_cave_desc: "这类岩洞星球是荒芜的岩石星球，大气层相当稀薄，或者完全没有大气。地表遍布着陨石坑，不存在任何生命形式；不过地表下隐藏着规模庞大的洞穴网络。"
- pc_pd_striped: "彩色丘陵星球"
- pc_pd_striped_desc: "这是一颗干燥、拥有氮氧大气的岩石星球；环境干旱，沙尘遍布，有着颜色绚丽的矿物构造。"
- pc_pd_striped_adj: "彩丘"
- mod_pc_pd_striped_habitability: "干旱星球宜居性"
- trait_pc_pd_striped_preference: "干旱星球偏好"
- trait_pc_pd_striped_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_nuked_cave: "岩洞星球（死寂）"
+ pc_pd_nuked_cave_desc: "这一岩洞星球是拥有氮氧大气的岩石星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。地表和洞穴体系中辐射水平高。鲜有生命迹象表面。"
  pc_carbon: "碳星"
  pc_carbon_desc: "这是荒芜的岩石星球，大气层相当稀薄，或者完全没有大气。地表遍布着陨石坑，不存在任何生命形式。不同于大部分以硅-氧作为主要组分的星球，这类星球拥有更高的碳-氧比。"
  pc_iron: "铁星"
@@ -528,12 +606,6 @@
  pc_pd_superhabitable_tooltip: "§Y超级类地星球§!是一类['concept_pd_uncommons']\n—拥有§G31-35§!的星球规模\n—会提供对应其他§Y超级类地星球§!的宜居性增益\n—只能§Y改造§!为另一种§Y超级类地星球§!\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—人口增长速度：§G+10%§!\n—建筑和区划花费：§R+25%§!\n—宜居度：§R-20%§!\n—$rare_building_warning$\n$t$—£society£ $pd_researcher_ending$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_alloys$"
  pc_pd_tidally_locked_tooltip: "§Y超级锁定星球§!是一类['concept_pd_uncommons']\n—会提供对应其他§Y潮汐锁定星球§!的宜居性增益\n—只能§Y改造§!为另一种§Y潮汐锁定星球§!\n—£district£ §Y$district_generator_plural$§!：§G+4§!\n—区划上线：§R-30%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_food$\n$t$—£physics£ £society£ $pd_researcher_ending$"
  pc_pd_cave_tooltip: "§Y岩洞星球§!是一类['concept_pd_uncommons']\n—会提供对应其他§Y岩洞星球§!的宜居性增益\n—只能§Y改造§!为另一种§Y岩洞星球§!\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—轨道轰炸伤害：§G-30%§!\n—岩石人口增长速度：§G+10%§!\n—生物人口增长速度：§R-10%§!\n—建筑和区划花费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_minerals$\n$t$—£engineering£ $pd_researcher_ending$"
- pc_pd_nuked_superhabitable: "超级类地星球（死寂）"
- pc_pd_nuked_superhabitable_desc: "这一超级类地星球是拥有氮氧大气的岩石星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面鲜有生命迹象，强重力环境对于不适应者会是一种折磨。"
- pc_pd_nuked_tidally_locked: "潮汐锁定星球（死寂）"
- pc_pd_nuked_tidally_locked_desc: "这一潮汐锁定星球是拥有氮氧大气的岩石星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面鲜有生命迹象。"
- pc_pd_nuked_cave: "岩洞星球（死寂）"
- pc_pd_nuked_cave_desc: "这一岩洞星球是拥有氮氧大气的岩石星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。地表和洞穴体系中辐射水平高。鲜有生命迹象表面。"
  pc_nuked_relic: "死寂遗落星球"
  pc_nuked_relic_desc: "这个星球表面曾经被完全被单一城市所覆盖。如今这里只有废弃的古老遗迹，其原住民早已离去。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。地表和洞穴体系中辐射水平高。鲜有生命迹象表面。"
  pc_pd_dry_gaia: "盖亚星球（干燥）"
@@ -554,36 +626,6 @@
  mod_pc_pd_wet_gaia_habitability: "盖亚星球宜居性（湿润）"
  trait_pc_pd_wet_gaia_preference: "盖亚星球偏好（湿润）"
  trait_pc_pd_wet_gaia_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_crevasse: "冰裂星球"
- pc_pd_crevasse_desc: "这是拥有氮氧大气圈的岩石星球，气候寒冷，水体基本是冻结的冰雪。尽管冰层表面环境极其恶劣，却有从地核中涌出的热能，在冰层深处塑成了众多条件适宜生存的裂谷。"
- pc_pd_crevasse_adj: "冰裂"
- mod_pc_pd_crevasse_habitability: "极地星球宜居性"
- trait_pc_pd_crevasse_preference: "极地星球偏好"
- trait_pc_pd_crevasse_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_dry_gaia_tidally_locked: "潮汐锁定星球（干燥·盖亚）"
- pc_pd_dry_gaia_tidally_locked_desc: "这类潮汐锁定星球是气候温和的理想世界，拥有氮氧大气层和可以自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
- pc_pd_dry_gaia_tidally_locked_adj: "潮汐锁定"
- mod_pc_pd_dry_gaia_tidally_locked_habitability: "潮汐锁定星球宜居性（干燥·盖亚）"
- trait_pc_pd_dry_gaia_tidally_locked_preference: "潮汐锁定星球偏好（干燥·盖亚）"
- trait_pc_pd_dry_gaia_tidally_locked_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_cold_gaia_tidally_locked: "潮汐锁定星球（寒冷·盖亚）"
- pc_pd_cold_gaia_tidally_locked_desc: "这类潮汐锁定星球是气候温和的理想世界，拥有氮氧大气层和可以自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
- pc_pd_cold_gaia_tidally_locked_adj: "潮汐锁定"
- mod_pc_pd_cold_gaia_tidally_locked_habitability: "潮汐锁定星球宜居性（寒冷·盖亚）"
- trait_pc_pd_cold_gaia_tidally_locked_preference: "潮汐锁定星球偏好（寒冷·盖亚）"
- trait_pc_pd_cold_gaia_tidally_locked_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_ice_dunes: "冰尘星球"
- pc_pd_ice_dunes_desc: "拥有氮氧大气的寒冷岩石星球，水体基本都是冻结的冰雪。温度常年低于冰点，冰粒如沙，堆聚成丘。"
- pc_pd_ice_dunes_adj: "寒冰"
- mod_pc_pd_ice_dunes_habitability: "极地星球宜居性"
- trait_pc_pd_ice_dunes_preference: "极地星球偏好"
- trait_pc_pd_ice_dunes_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_algae: "粉藻星球"
- pc_pd_algae_desc: "拥有氮氧大气和丰富水体的岩石星球。该星球上众多浅海和湖泊供养着绚丽的粉色藻华，这番壮丽之景在太空中也能看得一清二楚。"
- pc_pd_algae_adj: "粉色"
- mod_pc_pd_algae_habitability: "海洋星球宜居性"
- trait_pc_pd_algae_preference: "海洋星球偏好"
- trait_pc_pd_algae_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_hive_superhabitable: "超级类地星球（蜂巢）"
  pc_pd_hive_superhabitable_desc: "这整个超级类地星球其实就是一个巨大的生物体，由蜂巢思维通过灵能所操纵。任何不属于蜂巢意识体的生物一旦进入该世界将会受到整个行星的攻击。"
  pc_pd_hive_superhabitable_adj: "蜂巢"
@@ -620,45 +662,3 @@
  mod_pc_pd_machine_cave_habitability: "机械星球宜居性"
  trait_pc_pd_machine_cave_preference: "机械星球偏好"
  trait_pc_pd_machine_cave_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_aerial: "浮种星球"
- pc_pd_aerial_desc: "一类拥有致密氮氧大气的湿润岩石星球，降水量显著。独特的植物孕育出巨大的种荚，如云般飘荡在植被繁茂的陆地上空。"
- pc_pd_aerial_adj: "漂浮"
- mod_pc_pd_aerial_habitability: "热带星球宜居性"
- trait_pc_pd_aerial_preference: "热带星球偏好"
- trait_pc_pd_aerial_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_sandstone: "砂岩星球"
- pc_pd_sandstone_desc: "一类拥有氮氧大气的干燥岩石星球，草原广袤，烈风塑造出巨大的砂岩构造。这里的水圈维系着顽强的草本植物，后者已然适应这类环境。"
- pc_pd_sandstone_adj: "强风"
- mod_pc_pd_sandstone_habitability: "草原星球宜居性"
- trait_pc_pd_sandstone_preference: "草原星球偏好"
- trait_pc_pd_sandstone_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_lilypad: "睡莲星球"
- pc_pd_lilypad_desc: "这类草木葱郁的岩石星球被致密的氮氧大气包裹着，孕育出温暖的浅海以及生意盎然的丰富生命。水生植物强韧的叶片构成了地表的次级生态系统。"
- pc_pd_lilypad_adj: "漂浮"
- mod_pc_pd_lilypad_habitability: "热带星球宜居性"
- trait_pc_pd_lilypad_preference: "热带星球偏好"
- trait_pc_pd_lilypad_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_blossom: "花簇星球"
- pc_pd_blossom_desc: "这类岩石星球拥有氮氧大气和规模有限的水圈，经历着季节性动态变化。丰沃的草原上点缀着怒放的花卉，这番壮丽之景在轨道上也能看得一清二楚。"
- pc_pd_blossom_adj: "繁花"
- mod_pc_pd_blossom_habitability: "高山星球宜居性"
- trait_pc_pd_blossom_preference: "高山星球偏好"
- trait_pc_pd_blossom_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_sakura: "樱花星球"
- pc_pd_sakura_desc: "拥有氮氧大气的岩石星球。水圈活跃而稳定，大陆被海洋分隔。地表覆盖着繁茂的花树森林。"
- pc_pd_sakura_adj: "樱花"
- mod_pc_pd_sakura_habitability: "陆地星球宜居性"
- trait_pc_pd_sakura_preference: "陆地星球偏好"
- trait_pc_pd_sakura_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_amethyst: "紫水晶星球"
- pc_pd_amethyst_desc: "这颗干旱星球过去地质活动相当活跃。因而地壳中蕴藏着丰富的紫水晶石英矿。"
- pc_pd_amethyst_adj: "石英"
- mod_pc_pd_amethyst_habitability: "干旱星球宜居性"
- trait_pc_pd_amethyst_preference: "干旱星球偏好"
- trait_pc_pd_amethyst_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_turquoise: "绿松石星球"
- pc_pd_turquoise_desc: "这颗亚热带草原星球上分布着密集的绿松石矿床，在地表几乎随处可见。"
- pc_pd_turquoise_adj: "绿松石"
- mod_pc_pd_turquoise_habitability: "草原星球宜居性"
- trait_pc_pd_turquoise_preference: "草原星球偏好"
- trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
