--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -13,6 +13,8 @@
  pd_mushroom_desc: "真菌主宰着星球生态系统，广阔的蕈林和蕈原覆盖了大片区域。"
  pd_temperate: "温带世界"
  pd_temperate_desc: "这个世界气候温和，几乎每一块陆地都有丰富的生物多样性。"
+ pd_sakura: "樱花世界"
+ pd_sakura_desc: "大陆被海洋分隔，茂密而绚丽的花树森林覆盖着大地。"
  pd_megaflora: "巨木世界"
  pd_megaflora_desc: "巨木覆盖了星球地表，其庞大的根底向下延伸有数英里之深。在此类罕见植物周围进行建设成为了一项富有挑战的任务。"
  pd_petrified: "木化石世界"
@@ -29,6 +31,8 @@
  pd_fog_desc: "海水覆盖大部分地表，环境中湿度极高，因而陆地上空常年云雾弥漫，支持着内陆的繁茂森林和广阔草原。"
  pd_kelp: "巨藻世界"
  pd_kelp_desc: "海洋覆盖了此星球的大部分地表，富饶的浅海孕育出广袤的巨藻林。这一水下生态系统生机勃勃，支撑着星球表面引人注目的丰富生命形态。"
+ pd_algae: "粉藻世界"
+ pd_algae_desc: "该星球上众多浅海和湖泊供养着绚丽的粉色藻华，这番壮丽之景在太空中也能看得一清二楚。"
  pd_reef: "珊瑚礁世界"
  pd_reef_desc: "星球表面都是浅海，从轨道上可以看到水面下的巨大礁脉体系。礁脉高出水面形成了珊瑚岛链。"
  pd_archipelago: "火山列岛世界"
@@ -45,6 +49,10 @@
  pd_cenote_desc: "稀疏的热带森林覆盖着地表，大部分水体都被滤进复杂的地下系统中，滋养着互相关联的生态系统和丰富多样的生物。"
  pd_fungal: "蕈菌丛林世界"
  pd_fungal_desc: "蕈基植被构成了繁盛的生物圈的基础，从微小的刨子到参天巨菇，生命形态丰富多样。"
+ pd_aerial: "浮种世界"
+ pd_aerial_desc: "独特的植物孕育出巨大的种荚，如云般飘荡在植被繁茂的陆地上空。"
+ pd_lilypad: "睡莲世界"
+ pd_lilypad_desc: "星球上温暖的浅海供养着丰富多样的生命。水生植物强韧的叶片构成了地表的次级生态系统。"
  pd_geothermal: "地热世界"
  pd_geothermal_desc: "生机勃勃的热带裂谷散布于高耸的冰崖之间。地表下的强大地热活动维持着数百万个暖池，孕育出繁盛多样的生命形式。"
  pd_biolumen: "生物光世界"
@@ -77,15 +85,19 @@
  pd_badlands_desc: "干旱的环境中遍布着风蚀和水蚀塑成的沉积岩和黏土土壤。植被大多为山阴生长的灌木和杂草。"
  pd_succulent: "肉质植物世界"
  pd_succulent_desc: "气温炎热，偶有降雨却也雨量稀少，因而本地的草木发育出了种种保持水分的手段。"
+ pd_striped: "彩色丘陵世界"
+ pd_striped_desc: "这里呈现出迷人的地质构造。深邃的绚烂条纹是此地的特征，为干旱多沙的环境增添了一分靓丽。"
+ pd_amethyst: "紫水晶世界"
+ pd_amethyst_desc: "这颗干旱星球过去地质活动相当活跃。因而地壳中蕴藏着丰富的紫水晶石英矿。"
  pd_coral: "陆珊瑚世界"
  pd_coral_desc: "这里曾覆盖着海洋，由于生态因素的变化，现今却水源近无。此地的珊瑚丛已经适应了这种干旱的环境。"
  pd_primal: "原始世界"
  pd_primal_desc: "这个年轻星球的火山活动已经减弱，繁衍出了愈发复杂的动植物群，有助于塑成可呼吸的大气层和逐渐稳定的水圈。"
  pd_savannah: "草原世界"
  pd_savannah_desc: "较小的水圈只能支持短暂的雨季。植被主要为比较普遍的杂草，大多存在于绿洲附近。"
- pd_steppe: "冷草原世界"
- pd_steppe_desc: "半干旱草原中分布着起伏的山丘和平原，乃是陆地上的主要景观。尽管几乎没有林木，断断续续的降雨尚足以维持灌木和草禾。"
- pd_prairie: "温和草原世界"
+ pd_steppe: "干草原世界"
+ pd_steppe_desc: "半干旱的草原中分布着起伏的山丘和平原，是陆地上的主要景观。尽管几乎没有林木，断断续续的降雨尚足以维持灌木和草禾。"
+ pd_prairie: "茂草原世界"
  pd_prairie_desc: "水体和降水会呈现季节性变化。这是一整片广袤的陆地，大型内陆海分布其间。夏季短暂而干燥，冬季则寒冷严酷。"
  pd_veld: "莽原世界"
  pd_veld_desc: "亚热带环境，到处皆是灌丛林地和开阔的草原。冬季较为温和，夏季则又长又热。"
@@ -93,6 +105,10 @@
  pd_semi_arid_desc: "此处的水圈维系着短暂却雨量丰沛的湿季。草木集中生长在受遮蔽的谷地中和大型水域周边地带。"
  pd_aspen: "森林草原世界"
  pd_aspen_desc: "森林与草原互相交错，是这里的主要环境。水圈的规模较小，却也非常稳定。溪流与河谷供养着此地的森林和茂盛的灌丛。"
+ pd_sandstone: "砂岩世界"
+ pd_sandstone_desc: "这里有着广袤的草原和风蚀砂岩构造。水圈维系着顽强的草本植物，后者已然适应这里的环境。"
+ pd_turquoise: "绿松石世界"
+ pd_turquoise_desc: "这颗亚热带草原星球上分布着密集的绿松石矿床，在地表几乎随处可见。"
  pd_supercontinent: "超大陆世界"
  pd_supercontinent_desc: "板块构造还处于单一的超大陆状态。临近沿海的地区拥有繁茂的草木，内陆的环境则截然不同，由草原逐渐过渡为庞大的干燥荒漠。"
  pd_sinkhole: "地陷世界"
@@ -109,6 +125,10 @@
  pd_aeolian_desc: "通常风速可达3km/h以上。狂风塑造出空蚀的天坑，扁窄的峡谷，以及凹陷的洼地——这些地形让生命可以在其中蓬勃发育，而不会遭受恶劣气候的侵扰。"
  pd_ice_spike: "冰刺世界"
  pd_ice_spike_desc: "地表下剧烈的板块运动冲击着冰层深处，所形成的高耸冰刺构成了此地的主要景观。"
+ pd_crevasse: "冰裂世界"
+ pd_crevasse_desc: "尽管冰层表面环境极其恶劣，却有从地核中涌出的热能，在冰层深处塑成了众多条件适宜生存的裂谷。"
+ pd_ice_dunes: "冰尘世界"
+ pd_ice_dunes_desc: "温度常年低于冰点，冰粒如沙，堆聚成丘。 "
  pd_storm: "风暴世界"
  pd_storm_desc: "主要陆地均分布在两极附近，终年风暴不息的辽阔海洋将它们分隔开来。由于极端的环境条件，生命大都生活在洋面以下。"
  pd_iceberg: "冰山世界"
@@ -125,6 +145,8 @@
  pd_dune_forest_desc: "这里雾气丰沛，不过降水较少；低地都是干燥的沙丘，山上则森林茂密、白雪皑皑。"
  pd_fjord: "峡湾世界"
  pd_fjord_desc: "巨大的海洋深深嵌入陆地之中，孕育出沿海的副极地玉林和高海拔地区的山地草原。"
+ pd_blossom: "花簇世界"
+ pd_blossom_desc: "丰沃的草原上点缀着怒放的花卉，这番壮丽之景在轨道上也能看得一清二楚。"
  pd_glaciovolcanic: "冰川火山世界"
  pd_glaciovolcanic_desc: "这里的火山活动非常活跃，因而形成了丰富的地热湖泊，将罕见的矿物和能源带到冰封的地表。"
  pd_lanthanide: "镧星"
@@ -153,8 +175,10 @@
  pd_cold_superhabitable_desc: "这颗超级类地星球上有着强健的水圈和理想的农业条件。其平均气温较为温暖，有着地势较浅的海洋盆地。不过，这里对于不适应强重力环境的生物会是一种折磨。"
  pd_gaia_superhabitable: "超级类地世界（盖亚）"
  pd_gaia_superhabitable_desc: "这类超级类地星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对高等生命都是极佳的生活空间。其平均气温较为温暖，有着地势较浅的海洋盆地。不过，这里对于不适应强重力环境的生物会是一种折磨。"
- pd_gaia_world: "盖亚世界（湿润）"
- pd_gaia_world_desc: "这类星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对高等生命都是极佳的生活空间。"
+ pd_arcology_superhabitable: "超级类地世界（理想城）"
+ pd_arcology_superhabitable_desc: "这颗超级类地星球整体都被都市与工业集群覆盖。其平均气温较为温暖，不过，这里对于不适应强重力环境的生物会是一种折磨。"
+ pd_nuked_superhabitable: "超级类地世界（死寂）"
+ pd_nuked_superhabitable_desc: "一颗大气中充斥着氮氧元素的超级类地星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。对于不适应强重力环境的生物会是一种折磨。"
  pd_wet_tidally_locked: "白昼世界"
  pd_wet_tidally_locked_desc: "这颗潮汐锁定星球的恒久光照和狂风有着广阔的发电前景。暮光区是仅有的宜居地带。"
  pd_dry_tidally_locked: "昏光世界"
@@ -163,6 +187,10 @@
  pd_cold_tidally_locked_desc: "这颗潮汐锁定星球的恒久光照和狂风有着广阔的发电前景。暮光区是仅有的宜居地带。"
  pd_gaia_tidally_locked: "潮汐锁定世界（盖亚）"
  pd_gaia_tidally_locked_desc: "这类潮汐锁定星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。其暮光区对高等生命都是极佳的生活空间。"
+ pd_arcology_tidally_locked: "潮汐锁定世界（理想城）"
+ pd_arcology_tidally_locked_desc: "这颗潮汐锁定星球整体都被都市与工业集群覆盖。暮光区是仅有的宜居地带。"
+ pd_nuked_tidally_locked: "潮汐锁定世界（死寂）"
+ pd_nuked_tidally_locked_desc: "一颗大气中充斥着氮氧元素的潮汐锁定星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。暮光区是仅有的宜居地带。"
  pd_wet_cave: "岩溶洞窟世界"
  pd_wet_cave_desc: "整个星球地表下都是蔓延的岩洞网络。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。"
  pd_dry_cave: "砂岩洞窟世界"
@@ -171,8 +199,21 @@
  pd_cold_cave_desc: "整个星球地表下都是蔓延的岩洞网络。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。"
  pd_gaia_cave: "岩洞世界（盖亚）"
  pd_gaia_cave_desc: "这类岩洞星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对高等生命都是极佳的生活空间。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。"
- pd_striped: "彩色丘陵世界"
- pd_striped_desc: "这里呈现出迷人的地质构造。深邃的绚烂条纹是此地的特征，为干旱多沙的环境增添了一分靓丽。"
+ pd_arcology_cave: "岩洞世界（理想城）"
+ pd_arcology_cave_desc: "这颗岩洞星球整体都被都市与工业集群覆盖。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。 "
+ pd_nuked_cave: "岩洞世界（死寂）"
+ pd_nuked_cave_desc: "一颗大气中充斥着氮氧元素的岩洞星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。"
+ pd_gaia_world: "盖亚世界（湿润）"
+ pd_gaia_world_desc: "这类星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对高等生命都是极佳的生活空间。"
+ pd_dry_gaia_world: "盖亚世界（干燥）"
+ pd_dry_gaia_world_desc: "这类星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
+ pd_cold_gaia_world: "盖亚世界（寒冷）"
+ pd_cold_gaia_world_desc: "这类星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
+ pd_uncommon_gaia_world: "盖亚世界"
+ pd_uncommongaia_world_desc: "这类星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
+ pc_pd_nuked_arcology: "遗落世界（死寂）"
+ pc_pd_nuked_arcology_desc: "这曾是一座世界规模的巨城。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。"
+ pc_pd_nuked_arcology_tooltip: "宜居度：§R-100%§!\n拥有§Y$trait_pc_nuked_preference$§!或§Y$trait_survivor$§!特质时，宜居度：§G+100%§!"
  pd_diamond: "金刚石世界"
  pd_diamond_desc: "这里碳元素含量极高，加上高温高压条件，该星球的大部分物质都被塑造成了金刚石。"
  pd_carbon: "碳星"
@@ -199,37 +240,10 @@
  pd_subglacial_desc: "厚厚的冰层、极低的温度与稀薄的大气使得生命无法在地表生存。然而，潮汐加热和地热活动在坚冰下塑造出一片冰下海洋。"
  pd_hothouse: "温室世界"
  pd_hothouse_desc: "这颗星球的大气圈正在经历一场严重的温室效应，对任何生命都足以致命。"
- pd_arcology_superhabitable: "超级类地世界（理想城）"
- pd_arcology_superhabitable_desc: "这颗超级类地星球整体都被都市与工业集群覆盖。其平均气温较为温暖，不过，这里对于不适应强重力环境的生物会是一种折磨。"
- pd_arcology_tidally_locked: "潮汐锁定世界（理想城）"
- pd_arcology_tidally_locked_desc: "这颗潮汐锁定星球整体都被都市与工业集群覆盖。暮光区是仅有的宜居地带。"
- pd_arcology_cave: "岩洞世界（理想城）"
- pd_arcology_cave_desc: "这颗岩洞星球整体都被都市与工业集群覆盖。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。 "
- pd_nuked_superhabitable: "超级类地世界（死寂）"
- pd_nuked_superhabitable_desc: "一颗大气中充斥着氮氧元素的超级类地星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。对于不适应强重力环境的生物会是一种折磨。"
- pd_nuked_tidally_locked: "潮汐锁定世界（死寂）"
- pd_nuked_tidally_locked_desc: "一颗大气中充斥着氮氧元素的潮汐锁定星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。暮光区是仅有的宜居地带。"
- pd_nuked_cave: "岩洞世界（死寂）"
- pd_nuked_cave_desc: "一颗大气中充斥着氮氧元素的岩洞星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。"
- pd_dry_gaia_world: "盖亚世界（干燥）"
- pd_dry_gaia_world_desc: "这类星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
- pd_cold_gaia_world: "盖亚世界（寒冷）"
- pd_cold_gaia_world_desc: "这类星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
- pc_pd_nuked_arcology: "遗落世界（死寂）"
- pc_pd_nuked_arcology_desc: "这曾是一座世界规模的巨城。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。"
- pc_pd_nuked_arcology_tooltip: "宜居度：§R-100%§!\n拥有§Y$trait_pc_nuked_preference$§!或§Y$trait_survivor$§!特质时，宜居度：§G+100%§!"
  decision_engineered_environment_gaia: "星球塑形工程"
  decision_engineered_environment_gaia_desc: "我们会动用高级环境改造手段，将这颗星球塑造成一个天堂，创造出极其适宜高等生命的宜人环境。"
  engineered_environment_gaia: "完美塑形世界"
  engineered_environment_gaia_desc: "先进的环境改造技术重塑了这颗星球，这里的生态系统对高等生命而言是极佳的生存空间。"
- pd_crevasse: "冰裂世界"
- pd_crevasse_desc: "尽管冰层表面环境极其恶劣，却有从地核中涌出的热能，在冰层深处塑成了众多条件适宜生存的裂谷。"
- pd_uncommon_gaia_world: "盖亚世界"
- pd_uncommongaia_world_desc: "这类星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
- pd_ice_dunes: "冰尘世界"
- pd_ice_dunes_desc: "温度常年低于冰点，冰粒如沙，堆聚成丘。 "
- pd_algae: "粉藻世界"
- pd_algae_desc: "该星球上众多浅海和湖泊供养着绚丽的粉色藻华，这番壮丽之景在太空中也能看得一清二楚。"
  pd_hive_superhabitable: "$pc_pd_hive_superhabitable$"
  pd_hive_superhabitable_desc: "$pc_pd_hive_superhabitable_desc$"
  pd_hive_cave: "$pc_pd_hive_cave$"
@@ -242,17 +256,3 @@
  pd_machine_cave_desc: "$pc_pd_machine_cave_desc$"
  pd_machine_tidally_locked: "$pc_pd_machine_tidally_locked$"
  pd_machine_tidally_locked_desc: "$pc_pd_machine_tidally_locked_desc$"
- pd_aerial: "浮种世界"
- pd_aerial_desc: "独特的植物孕育出巨大的种荚，如云般飘荡在植被繁茂的陆地上空。"
- pd_sandstone: "砂岩世界"
- pd_sandstone_desc: "这里有着广袤的草原和风蚀砂岩构造。水圈维系着顽强的草本植物，后者已然适应这里的环境。"
- pd_blossom: "花簇世界"
- pd_blossom_desc: "丰沃的草原上点缀着怒放的花卉，这番壮丽之景在轨道上也能看得一清二楚。"
- pd_lilypad: "睡莲世界"
- pd_lilypad_desc: "星球上温暖的浅海供养着丰富多样的生命。水生植物强韧的叶片构成了地表的次级生态系统。"
- pd_sakura: "樱花世界"
- pd_sakura_desc: "大陆被海洋分隔，茂密而绚丽的花树森林覆盖着大地。"
- pd_amethyst: "紫水晶世界"
- pd_amethyst_desc: "这颗干旱星球过去地质活动相当活跃。因而地壳中蕴藏着丰富的紫水晶石英矿。"
- pd_turquoise: "绿松石世界"
- pd_turquoise_desc: "这颗亚热带草原星球上分布着密集的绿松石矿床，在地表几乎随处可见。"
