--- a/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
+++ b/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
@@ -5,6 +5,10 @@
  pd_fortress_arcology_desc: "这类普世城是星球规模的军事指挥中心，配备了兵营、训练设施和武器制造厂。"
  pd_commerical_arcology: "商业理想城"
  pd_commerical_arcology_desc: "这种理想城是星际贸易枢纽，里面全是人群熙攘的市场、巨大的商业中心和数量广泛的物流设施。"
+ pd_garden_arcology_rs: "$pd_garden_arcology$"
+ pd_garden_arcology_rs_desc: "$pd_garden_arcology_desc$"
+ pd_fortress_arcology_rs: "$pd_fortress_arcology$"
+ pd_fortress_arcology_rs_desc: "$pd_fortress_arcology_desc$"
  district_pd_arcology_research: "科研理想城"
  district_pd_arcology_research_plural: "科研理想城"
  district_pd_arcology_research_desc: "实验大楼直插云霄，众多人才共处一处，竞争与科研活动一样激烈。"
@@ -31,13 +35,20 @@
  mod_job_pd_naval_admin_gestalt_per_pop: "每$VALUE$人口§G+1§!$job_pd_naval_admin_gestalt$岗位"
  mod_job_pd_naval_admin_gestalt_per_pop_short: "\n每$VALUE$ £pop£ §G+1§! £mod_job_pd_naval_admin_gestalt_add£"
  job_pd_naval_admin_gestalt_effect_desc: "£job_pd_naval_admin_gestalt£ $job_pd_naval_admin_gestalt_plural$将£minerals£ §Y$minerals$§!转化为£society£ §Y研究点§!和£mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!，以此提升海军的效率。"
- job_pd_capital_bio_politician: "活体陈设政客"
- job_pd_capital_bio_politician_plural: "活体陈设政客"
+ job_pd_capital_bio_politician: "活体陈设代表"
+ job_pd_capital_bio_politician_plural: "活体陈设代表"
  job_pd_capital_bio_politician_desc: "某些活体陈设觉得自己比其他人更显赫时，他们会表现得更为满足。此类主导地位的存在对这些个体的精神状态与所有个体的幸福感都有着正面影响。"
  mod_job_pd_capital_bio_politician_add: "$job_pd_capital_bio_politician$岗位"
  mod_job_pd_capital_bio_politician_per_pop: "每$VALUE$人口§G+1§!$job_pd_capital_bio_politician$岗位"
  mod_job_pd_capital_bio_politician_per_pop_short: "\n每$VALUE$£pop£§G+1§!£mod_job_pd_capital_bio_politician_add£"
  job_pd_capital_bio_effect_desc: "$job_pd_capital_bio_politician$ $job_pd_capital_bio_politician_plural$将£consumer_goods£ §Y$consumer_goods$§!转化为£unity£ §Y$unity$§!，并提升§Y$mod_planet_jobs_complex_and_simple_drone_produces_mult$§!"
+ job_pd_robo_ranger: "生态共存子个体"
+ job_pd_robo_ranger_plural: "生态共存子个体"
+ job_pd_robo_ranger_desc: "生态共存子个体专注于为活体陈设保护行星清洁和大自然。"
+ mod_job_pd_robo_ranger_add: "$job_pd_robo_ranger$岗位"
+ mod_job_pd_robo_ranger_per_pop: "每$VALUE$人口§G+1§!$$job_pd_robo_ranger$岗位"
+ mod_job_pd_robo_ranger_per_pop_short: "\n每$VALUE$£pop£§G+1§!£mod_job_pd_robo_ranger_add£"
+ job_pd_robo_ranger_effect_desc: "£job_pd_robo_ranger£ $job_pd_robo_ranger_plural$产出£amenities£ §Y舒适度§!和£society_research£ §Y$society_research$§!。"
  building_pd_rogue_council: "活体陈设议会"
  building_pd_rogue_council_desc: "将特定活体陈设置于领袖位置上，可以满足其内部的社会等级需求，并可通过故意设计的“政治僵局”塑造出冲突的幻觉。这一策略使子个体可以专注于提升活体陈设的护理水平和满足感。"
  building_navel_base: "海军办公室"
@@ -46,7 +57,6 @@
  building_navel_command_desc: "这座军事设施是一个庞大的指挥要塞，是星际舰队战略管理的决策中枢。"
  decision_pd_garden_arcology_project: "理想城计划：花园"
  decision_pd_garden_arcology_project_desc: "将绿地“织入”理想城的构造中，可以发展成自然与都市和谐共生的宏伟普世城。"
- decision_pd_garden_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!，解锁特殊的£district£ §Y理想城区划§!。作为代价，星球自然资源会变为§R无法开发§!，不能建造更多的£district£ §Y发电§!、§Y采矿§!和§Y农业区划§!。"
  decision_pd_garden_arcology_project_effects_short: "提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!\n启用£district£ §Y理想城区划§!\n禁用建造£district£ §Y发电§!，§Y采矿§!以及§Y农业区划§!"
  decision_pd_garden_arcology_project_relic: "重建普世城：花园"
  decision_pd_garden_arcology_project_relic_desc: "这颗行星曾经是一个充满生机的普世城。重建星球的任务十分艰巨，但我们可以使其恢复为花园理想城。"
@@ -62,7 +72,6 @@
  decision_pd_fortress_arcology_project_relic_effects_short: "$decision_pd_fortress_arcology_project_effects_short$"
  decision_pd_commerical_arcology_project: "理想城计划：商业"
  decision_pd_commerical_arcology_project_desc: "在理想城的构造中妥善安排市场和贸易网络，我们可以建成一个繁荣的商业中心。"
- decision_pd_commerical_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!，解锁特殊的£district£ §Y理想城区划§!。作为代价，星球自然资源会变为§R无法开发§!，不能建造更多的£district£ §Y发电§!、§Y采矿§!和§Y农业区划§!。"
  decision_pd_commerical_arcology_project_effects_short: "提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!\n启用£district£ §Y理想城区划§!\n禁用建造£district£ §Y发电§!，§Y采矿§!以及§Y农业区划§!"
  decision_pd_commerical_arcology_project_relic: "重建普世城：商业"
  decision_pd_commerical_arcology_project_relic_desc: "这颗行星曾经是一个充满生机的普世城。重建星球的任务十分艰巨，但我们可以使其恢复为商业理想城。"
@@ -80,6 +89,12 @@
  mod_pc_pd_commerical_city_habitability: "Dummy-Class, do not use."
  trait_pc_pd_commerical_city_preference: "Dummy-Class, do not use."
  trait_pc_pd_commerical_city_preference_desc: "Dummy-Class, do not use."
+ pc_pd_garden_city: "Dummy-Class, do not use."
+ pc_pd_garden_city_desc: "Dummy-Class, do not use."
+ pc_pd_garden_city_adj: "Dummy-Class, do not use."
+ mod_pc_pd_garden_city_habitability: "Dummy-Class, do not use."
+ trait_pc_pd_garden_city_preference: "Dummy-Class, do not use."
+ trait_pc_pd_garden_city_preference_desc: "Dummy-Class, do not use."
  pc_pd_hive: "蜂巢主脑星球"
  pc_pd_hive_desc: "这整个世界其实就是一个巨大的生物体，与创造它的蜂群思维交缠在一起。它被塑造成高级思维进程的堡垒，受到严密戒备。整个世界随时准备迎击不受欢迎的来客。"
  pc_pd_hive_adj: "$pc_hive_adj$"
@@ -122,25 +137,6 @@
  decision_pd_machine_nexus_project_desc: "这一机械星球会拓展成先进子程序的堡垒。"
  decision_pd_machine_nexus_project_effects: "将星球转变为§Y$pc_pd_hive$§!，提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!，解锁特殊的£district£ §Y理想城区划§!。作为代价，星球自然资源将变得§R无法开发§!，不可建造更多的£district£ §Y发电§!、§Y采矿§!和§Y农业区划§!。"
  decision_pd_machine_nexus_project_effects_short: "提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!\n启用£district£ §Y理想城区划§!\n禁用建造£district£ §Y发电§!，§Y采矿§!以及§Y农业区划§!"
- pd_garden_arcology_rs: "$pd_garden_arcology$"
- pd_garden_arcology_rs_desc: "$pd_garden_arcology_desc$"
- pd_fortress_arcology_rs: "$pd_fortress_arcology$"
- pd_fortress_arcology_rs_desc: "$pd_fortress_arcology_desc$"
- job_pd_robo_ranger: "生态共存子个体"
- job_pd_robo_ranger_plural: "生态共存子个体"
- job_pd_robo_ranger_desc: "生态共存子个体专注于为活体陈设保护行星清洁和大自然。"
- mod_job_pd_robo_ranger_add: "$job_pd_robo_ranger$岗位"
- mod_job_pd_robo_ranger_per_pop: "每$VALUE$人口§G+1§!$$job_pd_robo_ranger$岗位"
- mod_job_pd_robo_ranger_per_pop_short: "\n每$VALUE$£pop£§G+1§!£mod_job_pd_robo_ranger_add£"
- job_pd_robo_ranger_effect_desc: "£job_pd_robo_ranger£ $job_pd_robo_ranger_plural$产出£amenities£ §Y舒适度§!和£society_research£ §Y$society_research$§!。"
- pc_pd_garden_city: "Dummy-Class, do not use."
- pc_pd_garden_city_desc: "Dummy-Class, do not use."
- pc_pd_garden_city_adj: "Dummy-Class, do not use."
- mod_pc_pd_garden_city_habitability: "Dummy-Class, do not use."
- trait_pc_pd_garden_city_preference: "Dummy-Class, do not use."
- trait_pc_pd_garden_city_preference_desc: "Dummy-Class, do not use."
-
-###Tooltips
  decision_pd_garden_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升§Y资源产出§!和§Y人口增长§!。\n启用£district£理想城区划：$TABBED_NEW_LINE$—§Y$district_arcology_civilian_industry$§!$TABBED_NEW_LINE$—§Y$district_pd_arcology_research$§!$TABBED_NEW_LINE$—§Y$district_arcology_leisure$§!$TABBED_NEW_LINE$—§Y$district_arcology_administrative$§!\n禁用£district£区划：$TABBED_NEW_LINE$—§Y$district_generator$§!$TABBED_NEW_LINE$—§Y$district_mining$§!$TABBED_NEW_LINE$—§Y$district_farming$§!"
- decision_pd_commerical_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升§Y资源产出§!和§Y人口增长§!。\n启用£district£理想城区划：$TABBED_NEW_LINE$—§Y$district_pd_arcology_industrial$§!$TABBED_NEW_LINE$—§Y$district_arcology_pd_trade$§!$TABBED_NEW_LINE$—§Y$district_arcology_leisure$§!$TABBED_NEW_LINE$—§Y$district_arcology_administrative$§!\n禁用£district£区划：$TABBED_NEW_LINE$—§Y$district_generator$§!$TABBED_NEW_LINE$—§Y$district_mining$§!$TABBED_NEW_LINE$—§Y$district_farming$§!"
  decision_pd_miltary_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升§Y资源产出§!和§Y人口增长§!。\n启用£district£理想城区划：$TABBED_NEW_LINE$—§Y$district_arcology_arms_industry$§!$TABBED_NEW_LINE$—§Y$district_pd_arcology_naval$§!$TABBED_NEW_LINE$—§Y$district_arcology_leisure$§!$TABBED_NEW_LINE$—§Y$district_arcology_administrative$§!\n禁用£district£区划：$TABBED_NEW_LINE$—§Y$district_generator$§!$TABBED_NEW_LINE$—§Y$district_mining$§!$TABBED_NEW_LINE$—§Y$district_farming$§!"
+ decision_pd_commerical_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升§Y资源产出§!和§Y人口增长§!。\n启用£district£理想城区划：$TABBED_NEW_LINE$—§Y$district_pd_arcology_industrial$§!$TABBED_NEW_LINE$—§Y$district_arcology_pd_trade$§!$TABBED_NEW_LINE$—§Y$district_arcology_leisure$§!$TABBED_NEW_LINE$—§Y$district_arcology_administrative$§!\n禁用£district£区划：$TABBED_NEW_LINE$—§Y$district_generator$§!$TABBED_NEW_LINE$—§Y$district_mining$§!$TABBED_NEW_LINE$—§Y$district_farming$§!"
