--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_flooded_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_flooded_l_simp_chinese.yml
@@ -16,7 +16,7 @@
  flooded_habitat_desc: "这个星球被灌满了水，用于模拟水生生物的自然生长环境。"
  pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$：§G+3§!\n$MOD_POP_GROWTH_SPEED$：§G+10%§!\n$mod_planet_jobs_produces_mult$：§G+5%§!\n§Y非水生§!宜居性：§R-20%§!"
  pd_aw_flooded_planet: "洪潮星球"
- pd_aw_flooded_planet_desc: "这个海洋星球是水生物种的理想家园。水下生命生活和乐。"
+ pd_aw_flooded_planet_desc: "这个海洋星球是水生物种的理想家园。水下生命过着和乐的生活。"
  pd_aw_flooded_habitat: "洪潮居住站"
  pd_aw_flooded_habitat_desc: "这个居住站被灌满了水，用于模拟水生生物的自然生长环境。"
  ICE_MINING_PLANET_SUCCESS_TITLE: "行星已被淹灌"
