--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_wasteland_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_wasteland_l_simp_chinese.yml
@@ -1,5 +1,5 @@
 ﻿l_simp_chinese:
- ap_pd_wasteland_worlds: "无节制工业"
+ ap_pd_wasteland_worlds: "无管制工业"
  ap_pd_wasteland_worlds_desc: "为追求不受限制的生产力，我们必须抛开环境限制，充分发掘星球的工业潜力。"
  allow_wasteland_worlds: "§Y解锁决议：§!在非理想星球使用$decision_pd_aw_wasteland_planet$"
  describe_wasteland_worlds: "§Y$decision_pd_aw_wasteland_planet$§!修正：\n$t$—解锁£district£ §Y发电区划§!和§Y采矿区划§!\n$t$—禁用所有§Y农业区划§!\n$t$—$MOD_HABITABILITY_CEIL$：§Y60%§!\n$t$—$mod_planet_jobs_alloys_produces_mult$：§G100%§!\n$t$—$mod_planet_jobs_consumer_goods_produces_mult$：§G100%§!\n$t$—$mod_planet_chemists_produces_mult$：§G50%§!\n$t$—$mod_planet_refiners_produces_mult$：§G50%§!\n$t$—$mod_planet_translucers_produces_mult$：§G50%§!"
@@ -17,5 +17,5 @@
  pd_wasteland_planet_tooltip: "解锁£district£ §Y发电区划§!和§Y采矿区划§!\n禁用所有§Y农业区划§!"
  MESSAGE_PD_AW_WASTELAND_DESC:1 "$PLANET|Y$现在拥有§Y$decision_pd_aw_wasteland_planet$§!"
  MESSAGE_PD_AW_WASTELAND_MESSAGE_TYPE_TITLE: "已废除环境法规"
- MESSAGE_PD_AW_WASTELAND_CLEANUP_DESC:1 "$PLANET|Y$的生态系统修复完成。"
+ MESSAGE_PD_AW_WASTELAND_CLEANUP_DESC:1 "$PLANET|Y$的生态系统已经修复完成。"
  MESSAGE_PD_AW_WASTELAND_CLEANUP_MESSAGE_TYPE_TITLE: "重新采纳环境法规"
