--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_domed_colonies_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_domed_colonies_l_simp_chinese.yml
@@ -3,12 +3,12 @@
  pd_domed_colony_0_DESC: "这个星球拥有环境改造的可能。通过建立穹顶殖民地，我们可以建立一个立足点，作为逐渐改造星球环境的基地。"
  pd_domed_colony_0_MEGASTRUCTURE_DETAILS: "§Y穹顶殖民地§!是一系列自给自足的行星际穹顶居住站，建立在拥有改造潜力的星球上。"
  requires_terraforming_candidate: "$TRIGGER_FAIL$必须有环境改造候选修正。"
- requires_correct_planet_class: "$TRIGGER_FAIL$星球类型必须得能支持穹顶殖民地的建设。"
+ requires_correct_planet_class: "$TRIGGER_FAIL$必须是支持建造穹顶殖民地的星球类型。"
  requires_pd_colony: "$TRIGGER_FAIL$星系内必须有至少一个非人工殖民地。"
- requires_pd_moon_base_site: "$TRIGGER_FAIL$必须有一项边沿基地修正。"
- pd_domed_base_0: "边沿基地"
- pd_domed_base_0_DESC: "这颗不宜居星球是建造边沿基地的理想地点。它可以成为支持星系内临近殖民地的枢纽。"
- pd_domed_base_0_MEGASTRUCTURE_DETAILS: "§Y边沿基地§!是一种可自主维持基地，建立在拥有战略价值的不宜居星球上。它不足以成为完整的殖民地，但可以增进所在星系的经济水平。"
+ requires_pd_moon_base_site: "$TRIGGER_FAIL$必须有外围基地选址修正。"
+ pd_domed_base_0: "外围基地"
+ pd_domed_base_0_DESC: "这颗不宜居星球是建造外围基地的理想地点。它可以成为支持星系内邻近殖民地的枢纽。"
+ pd_domed_base_0_MEGASTRUCTURE_DETAILS: "§Y外围基地§!是一种可自主维持基地，建立在拥有战略价值的不宜居星球上。它不足以成为完整的殖民地，但可以增进所在星系的经济水平。"
  TARGET_DOME_BASE_NAME: "[FROM.from.planet.GetName]基地"
  mod_job_trader_per_pop: "每$VALUE$人口§G+1§!£job_trader£ $job_trader$岗位"
  mod_job_trader_per_pop_short: "\n每$VALUE$ £pop£ §G+1§! £job_trader£"
@@ -59,36 +59,36 @@
  hab_terraforming_candidate: "环境改造候选"
  hab_terraforming_candidate_desc: "尽管表面荒芜贫瘠毫无生机，这颗星球上仍存在有以冻结形态存在的水，这里也许曾经孕育过一个生机勃勃的生态系统。如果利用合适的科技加以环境改造，这里可能成为一个宜居的世界。"
  pd_domed_colony: "穹顶殖民地"
- pd_domed_colony_desc: "殖民地居民生活在先进的穹顶防护网络下，免遭恶劣星球环境的侵扰。虽然是安全的居住地，这些结构却有着高昂的维护和扩建成本。"
- pd_moon_base_trade: "商业卫星基地"
- pd_moon_base_trade_desc: "先进的穹顶防护网络下都是商业区、仓库和太空港，使这里成为了繁华的贸易中心。这个穹顶基地联通着自己的母星，其存在全仰赖于临近宜居星球的不可或缺的联系。"
- pd_moon_base_military: "军事卫星基地"
- pd_moon_base_military_desc: "先进的穹顶防护网络下都是军械库、兵营和发射台。这个穹顶基地依靠来自临近宜居星球的后勤供应。"
- pd_moon_base_factory: "工业卫星基地"
- pd_moon_base_factory_desc: "先进的穹顶防护网络下都是工厂、工坊和制造中心。这个穹顶基地联通着附近的宜居星球，其工业品的资源和配送都依赖于这种联系。"
- pd_moon_base_foundry: "铸造卫星基地"
- pd_moon_base_foundry_desc: "先进的穹顶防护网络下都是铸造厂和合金加工厂。这一穹顶基地与母星紧密相连，其原材料和获取和合金成品的外输都仰赖于与附近宜居星球的基本联系。"
- pd_moon_base_admin: "行政卫星基地"
- pd_moon_base_admin_desc: "先进的穹顶防护网络下都是政府办公室和官僚机构。这个穹顶基地联通着自己的母星，其供给和维持全仰赖于临近宜居星球的至关重要的联系。"
- pd_moon_base_priest: "教会卫星基地"
- pd_moon_base_priest_desc: "先进的穹顶防护网络下都是神殿和神龛，使这里成为了信徒的宗教中心。这个穹顶基地联通着自己的母星，其存在全仰赖于临近宜居星球的神圣联系。"
- pd_domed_base_research: "科研行星基地"
- pd_domed_base_research_desc: "先进的穹顶防护网络下都是实验室和研究设施。它与星系内其他星球联通，依靠此种联系获得必要的资源。"
- pd_domed_base_mining: "采矿行星基地"
- pd_domed_base_mining_desc: "先进的穹顶防护网络下都是矿山和开采设施。它联通着星系内其他星球，依靠此种联系来获取必要资源和运输开采矿物。"
- pd_domed_base_energy: "发电行星基地"
- pd_domed_base_energy_desc: "先进的穹顶防护网络下都是发电厂和能量转换器。它与星系内其他星球联通，依靠此种联系获取必要资源和输送能量。"
- pd_domed_base_food: "水培行星边沿基地"
- pd_domed_base_food_desc: "先进的穹顶防护网络下都是水培农场和农业模块。它与星系内其他星球联通，依靠此种联系获取必要资源和运输食物。"
- pd_domed_moonbase_site: "卫星基地基址"
- pd_domed_moonbase_site_desc: "这颗卫星是建造边沿基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
- pd_domed_research_site: "潜在科研行星基地基址"
+ pd_domed_colony_desc: "殖民地居民生活在先进的穹顶防护网络下，免遭恶劣星球环境的侵扰。这些构造可以提供安全保障，却也带来了高昂的维护成本和扩建成本。"
+ pd_moon_base_trade: "商业外围基地（卫星）"
+ pd_moon_base_trade_desc: "先进的穹顶防护网络下都是商业区、仓库和太空港，使这里成为了繁华的贸易中心。这个穹顶基地接入了附近的核心星球，这是其存在的必不可少的仰仗。"
+ pd_moon_base_military: "军事外围基地（卫星）"
+ pd_moon_base_military_desc: "先进的穹顶防护网络下都是军械库、兵营和发射台。这一处穹顶基地依靠附近核心星球来保障后勤供应。"
+ pd_moon_base_factory: "工业外围基地（卫星）"
+ pd_moon_base_factory_desc: "先进的穹顶防护网络下都是工厂、工坊和制造中心。这个穹顶基地接入了附近的核心星球，其资源的获取和工业产品的配送都仰赖于此。"
+ pd_moon_base_foundry: "铸造外围基地（卫星）"
+ pd_moon_base_foundry_desc: "先进的穹顶防护网络下都是铸造厂和合金加工厂。这一穹顶基地与附近的核心星球关系紧密，这是其获取原材料和输出成品合金的不可或缺的基础。"
+ pd_moon_base_admin: "行政外围基地（卫星）"
+ pd_moon_base_admin_desc: "先进的穹顶防护网络下都是政府办公室和官僚机构。这个穹顶基地接入了附近的核心星球，这对它的补给和维护都至关重要。"
+ pd_moon_base_priest: "教会外围基地（卫星）"
+ pd_moon_base_priest_desc: "先进的穹顶防护网络下都是神殿和神龛，使这里成为了信徒的宗教中心。这个穹顶基地与附近的核心星球关系密切，依靠着这种神圣的联系。"
+ pd_domed_base_research: "科研外围基地"
+ pd_domed_base_research_desc: "先进的穹顶防护网络下都是实验室和研究设施。它接入了星系内的其他星球，依靠此种联系获得必要的资源。"
+ pd_domed_base_mining: "采矿外围基地"
+ pd_domed_base_mining_desc: "先进的穹顶防护网络下都是矿山和开采设施。它接入了星系内的其他星球，依靠此种联系来获取必要资源和运输开采矿物。"
+ pd_domed_base_energy: "发电外围基地"
+ pd_domed_base_energy_desc: "先进的穹顶防护网络下都是发电厂和能量转换器。它接入了星系内的其他星球，依靠此种联系获取必要资源和输送能量。"
+ pd_domed_base_food: "水培外围基地"
+ pd_domed_base_food_desc: "先进的穹顶防护网络下都是水培农场和农业模块。它接入了星系内的其他星球，依靠此种联系获取必要资源和运输食物。"
+ pd_domed_moonbase_site: "外围基地选址（卫星）"
+ pd_domed_moonbase_site_desc: "这颗卫星是建造外围基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
+ pd_domed_research_site: "外围基地潜在选址（科研）"
  pd_domed_research_site_desc: "这颗行星是建造科研穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
- pd_domed_mining_site: "潜在采矿行星基地基址"
+ pd_domed_mining_site: "外围基地潜在选址（采矿）"
  pd_domed_mining_site_desc: "这颗行星是建造采矿穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
- pd_domed_food_site: "潜在水培行星基地基址"
+ pd_domed_food_site: "外围基地潜在选址（水培）"
  pd_domed_food_site_desc: "这颗行星是建造水培穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
- pd_domed_energy_site: "潜在发电行星基地基址"
+ pd_domed_energy_site: "外围基地潜在选址（发电）"
  pd_domed_energy_site_desc: "这颗行星是建造发电穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
  d_phab_energy_1: "放射性同位素"
  d_phab_energy_1_desc: "这个地方有丰富的放射性同位素储藏，且易于开采，是高效发电的理想之选。"
@@ -109,49 +109,49 @@
  d_phab_food_3: "钾矿"
  d_phab_food_3_desc: "这里散布的钾矿对于将环境改造为产粮沃土至关重要。"
  d_pd_solar_system_network_hub: "星系内网络枢纽"
- d_pd_solar_system_network_hub_desc: "这个枢纽是星系内行星边沿基地的重要一环。穹顶基地可以提供就业和住房，维持运作所需的补给和资源则来自核心殖民地。"
+ d_pd_solar_system_network_hub_desc: "这个枢纽是联通星系内外围基地的重要一环。外围基地可以提供就业和住房，但要依靠核心殖民地提供维持运作所需的补给和资源。"
  tech_pd_domed_colonies: "穹顶居住站"
  tech_pd_domed_colonies_desc: "技术进步使得在非宜居的边缘星球建立穹顶殖民地成为可能。"
- allow_domed_colonies: "§H解锁巨构：§!§Y穹顶殖民地§!和§Y边沿基地§!"
+ allow_domed_colonies: "§H解锁巨构：§!§Y穹顶殖民地§!和§Y外围基地§!"
  allow_domed_colonies_DETAILS: "这项技术可以在一些不宜居星球上建立穹顶殖民地和穹顶基地。"
  decision_build_solar_system_network_hub: "建造$d_pd_solar_system_network_hub$"
- decision_build_solar_system_network_hub_desc: "我们会建立一个枢纽，使星系内的边沿基地接入该星球的经济网络。"
+ decision_build_solar_system_network_hub_desc: "我们会建立一个枢纽，使星系内的外围基地接入该星球的经济网络。"
  decision_remove_solar_system_network_hub: "移除$d_pd_solar_system_network_hub$"
- decision_remove_solar_system_network_hub_desc: "我们将移除星系内的边沿基地与该星球经济网络的连接枢纽。"
- decision_change_moon_base: "替换卫星基地"
- decision_change_moon_base_desc: "这会改变这颗卫星上的边沿基地。"
- decision_change_moon_base_effects: "我们可以给这颗卫星的边沿基地选择一种不同的用途。"
+ decision_remove_solar_system_network_hub_desc: "我们将移除星系内外围基地与该星球经济网络的连接枢纽。"
+ decision_change_moon_base: "变更外围基地（卫星）"
+ decision_change_moon_base_desc: "这会改变这颗卫星上的外围基地。"
+ decision_change_moon_base_effects: "我们可以给这颗卫星的外围基地选择一种不同的用途。"
  decision_pd_flood_domed_colony: "淹灌穹顶殖民地"
  decision_pd_flood_domed_colony_desc: "穹顶殖民地可以成为理想的居所——只要那里有充足的水。我们的冰开采网络能让我们从其他的天体开采冰，灌淹[This.GetName]，让此地变成一个完美的轨道水族馆。"
- pddomebases.100.name: "[From.GetName]卫星基地完成"
- pddomebases.100.desc: "§Y[From.GetName]§!的卫星基地已经建设完毕。\n\n应该为它设立何种职能？"
- pddomebases.100.trade: "商业卫星基地"
- pddomebases.100.trade.tt: "这一卫星基地会连接到所属行星的§Y$d_pd_solar_system_network_hub$§!，为与之相连的殖民地提供额外的£job_trader£ $job_trader_plural$。"
- pddomebases.100.military: "军事卫星基地"
- pddomebases.100.military.tt: "这一卫星基地会连接到所属行星的§Y$d_pd_solar_system_network_hub$§!，为与之相连的殖民地提供额外的£job_soldier£ [GetSoldierPlural]。"
- pddomebases.100.factory: "工业卫星基地"
- pddomebases.100.factory.tt: "这一卫星基地会连接到所属行星的§Y$d_pd_solar_system_network_hub$§!，为与之相连的殖民地提供额外的[GetArtisanIcon][GetArtisanPlural]。"
- pddomebases.100.foundry: "铸造卫星基地"
- pddomebases.100.foundry.tt: "这一卫星基地会连接到所属行星的§Y$d_pd_solar_system_network_hub$§!，为与之相连的殖民地提供额外的£job_foundry£ §Y[GetAlloyProducerPlural]§!。"
- pddomebases.100.admin: "行政卫星基地"
- pddomebases.100.admin.tt: "这一边沿基地会连接到所属行星的§Y$d_pd_solar_system_network_hub$§!，为与之相连的殖民地提供额外的[GetAdministratorWithIcon]。"
- pddomebases.100.priest: "教会卫星基地"
+ pddomebases.100.name: "[From.GetName]外围基地（卫星）完成"
+ pddomebases.100.desc: "§Y[From.GetName]§!的外围基地（卫星）已经建设完毕。\n\n应该为它设立何种职能？"
+ pddomebases.100.trade: "商业外围基地（卫星）"
+ pddomebases.100.trade.tt: "这一外围基地（卫星）会对接行星上的§Y$d_pd_solar_system_network_hub$§!，为与之联系的殖民地提供额外的£job_trader£ $job_trader_plural$。"
+ pddomebases.100.military: "军事外围基地（卫星）"
+ pddomebases.100.military.tt: "这一外围基地（卫星）会对接行星上的§Y$d_pd_solar_system_network_hub$§!，为与之联系的殖民地提供额外的£job_soldier£ [GetSoldierPlural]。"
+ pddomebases.100.factory: "工业外围基地（卫星）"
+ pddomebases.100.factory.tt: "这一外围基地（卫星）会对接行星上的§Y$d_pd_solar_system_network_hub$§!，为与之联系的殖民地提供额外的[GetArtisanIcon][GetArtisanPlural]。"
+ pddomebases.100.foundry: "铸造外围基地（卫星）"
+ pddomebases.100.foundry.tt: "这一外围基地（卫星）会对接行星上的§Y$d_pd_solar_system_network_hub$§!，为与之联系的殖民地提供额外的£job_foundry£ §Y[GetAlloyProducerPlural]§!。"
+ pddomebases.100.admin: "行政外围基地（卫星）"
+ pddomebases.100.admin.tt: "这一外围基地（卫星）会对接行星上的§Y$d_pd_solar_system_network_hub$§!，为与之联系的殖民地提供额外的[GetAdministratorWithIcon]。"
+ pddomebases.100.priest: "教会外围基地（卫星）"
  pddomebases.100.priest.tt: "$pddomebases.100.admin.tt$"
  origin_pd_interplanetary_settlers: "行星际殖民"
- origin_pd_interplanetary_settlers_desc: "在他们触及其它恒星以前，这个帝国就为自己打好了基础，建立了遍布于母星系卫星和行星的穹顶居住站。现在，有了FTL技术，他们站在新时代的开端，准备触摸未知的宙域。"
+ origin_pd_interplanetary_settlers_desc: "在触及其它恒星以前，这个帝国就为自己打好了基础，建立了遍布于母星系卫星和行星的穹顶居住站。现在，有了FTL技术，他们站在新时代的开端，准备触摸未知的宙域。"
  origin_tooltip_pd_interplanetary_settlers_start_effects: "—$INITIAL_POPS$§G+2§!$NEW_LINE$—$HOMEWORLD$$TABBED_NEW_LINE$—['concept_pd_network_hub', $d_pd_solar_system_network_hub$]$NEW_LINE$—母星的卫星：$TABBED_NEW_LINE$—['concept_pd_moonbase', $pd_domed_base_0$]$NEW_LINE$—殖民地：$TABBED_NEW_LINE$—['concept_pd_domed_colony', $pd_domed_colony_0$]$NEW_LINE$—$ADDITONAL_TECHNOLOGIES_STRING$['concept_tech_pd_domed_colonies', £engineering£ $tech_pd_domed_colonies$]"
  pd_interplanetary_system_initializer_NAME: "随机穹顶星系"
- pd_interplanetary_system_initializer_DESC: "随机初始星系，附带一个穹顶殖民地和一个边沿基地。"
- pd_interplanetary_sol_system_initializer_NAME: "太阳系（穹顶星系）"
- pd_interplanetary_sol_system_initializer_DESC: "以太阳系作为初始星系，附带一个穹顶殖民地和一个边沿基地。"
+ pd_interplanetary_system_initializer_DESC: "随机初始星系，附带一处穹顶殖民地和一处外围基地。"
+ pd_interplanetary_sol_system_initializer_NAME: "太阳系（穹顶）"
+ pd_interplanetary_sol_system_initializer_DESC: "以太阳系作为初始星系，附带一处穹顶殖民地和一处外围基地。"
  concept_pd_network_hub: "$d_pd_solar_system_network_hub$"
- concept_pd_network_hub_desc: "根据首府级别和星系内已建造的['concept_pd_moonbases', 行星边沿基地]来添加更多岗位。\n\n§L$d_pd_solar_system_network_hub_desc$§!"
- concept_pd_moonbase: "边沿基地"
- concept_pd_moonbase_desc: "星系内若是存在任何§Y$d_pd_solar_system_network_hub$§!，这些边沿基地就会与之连接，为行星提供额外岗位。\n\n§L$pd_domed_base_0_MEGASTRUCTURE_DETAILS$§!"
+ concept_pd_network_hub_desc: "会根据首府级别和星系内已建造的['concept_pd_moonbases', 外围基地]来添加更多岗位。\n\n§L$d_pd_solar_system_network_hub_desc$§!"
+ concept_pd_moonbase: "外围基地"
+ concept_pd_moonbase_desc: "星系内若存在任何§Y$d_pd_solar_system_network_hub$§!，这些外围基地就会与之对接，为行星提供额外岗位。\n\n§L$pd_domed_base_0_MEGASTRUCTURE_DETAILS$§!"
  concept_pd_domed_colony: "穹顶殖民地"
  concept_pd_domed_colony_desc: "建造在拥有§Y$terraforming_candidate$§!修正的行星上，可以不经环境改造就进行殖民。\n\n§L$pd_domed_colony_0_MEGASTRUCTURE_DETAILS$§!"
  concept_tech_pd_domed_colonies: "$tech_pd_domed_colonies$"
  concept_tech_pd_domed_colonies_desc: "$allow_domed_colonies$\n\n§L$tech_pd_domed_colonies_desc$§!"
- concept_pd_moonbases: "边沿基地"
+ concept_pd_moonbases: "外围基地"
  concept_pd_domed_colonies: "穹顶殖民地"
- requires_no_terraforming:1 "$TRIGGER_FAIL$不可建造于正在执行环境改造的星球。"
+ requires_no_terraforming:1 "$TRIGGER_FAIL$不可建造于正在环境改造的星球。"
